; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_commons.c_get_percentage.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_commons.c_get_percentage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @get_percentage(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %15

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = uitofp i64 %9 to float
  %11 = load i64, i64* %3, align 8
  %12 = uitofp i64 %11 to float
  %13 = fdiv float %10, %12
  %14 = fmul float %13, 1.000000e+02
  br label %15

15:                                               ; preds = %8, %7
  %16 = phi float [ 0.000000e+00, %7 ], [ %14, %8 ]
  ret float %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
